added gitter sidecar chat
see https://sidecar.gitter.im/ it makes the irc/gitter even more approachable

--- a/index.html
+++ b/index.html
@@ -19,3 +19,10 @@ layout: default
 		</article>
 	{% endfor %}
 </div>
+
+<script>
+  ((window.gitter = {}).chat = {}).options = {
+    room: 'HearthSim/HearthSim'
+  };
+</script>
+<script src="https://sidecar.gitter.im/dist/sidecar.v1.js" async defer></script>
